# ph_mcp_server

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTAINER_SETUP.md  DEPLOYMENT_CHECKLIST.md  DEVELOPMENT.md  HTTPS_SETUP.md  MIGRATION_TO_PIP.md  Makefile  PROJECT_STRUCTURE.txt  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  config.py  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  server.py  setup.py  setup.sh  start.sh
deploy/: README.md  deploy.sh  nginx.conf  ph-mcp-server.service  update.sh
services/: stock_service.py  supabase_service.py
tests/: test_server.py
