[project]
name = "ph-mcp-server"
version = "1.0.0"
description = "Product Hunt MCP Server - HTTP JSON-RPC mode"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "supabase==2.10.0",
    "httpx==0.27.2",
    "uvicorn[standard]>=0.32.0",
    "starlette>=0.35.0",
]

[project.scripts]
ph-mcp-server = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = [
    "server.py",
    "config.py",
    "services/",
]
